# parallelProgrammingResearch

./: LICENSE  README.md
1sem/cppwrapper/source/: main.cpp
1sem/tasks/Lab2_IntegralCalculation/include/: input.h  integral.h
1sem/tasks/Lab2_IntegralCalculation/source/: Plot.py  integral.c  main.c
1sem/tasks/Task0_Proxy/source/: proxy.c
1sem/tasks/Task1_CalculateExp/Var2_LongArithmetics/source/: exp.c
1sem/tasks/Task2_ParallelSort/: CMakeLists.txt
1sem/tasks/Task2_ParallelSort/source/: input.c  main.c
2sem/Lab1_Loops/: analysis.md  plot_res.py  run_script.sh
2sem/Lab1_Loops/source/: personal_sequential.cpp
2sem/Task1_HelloWorld/: CMakeLists.txt
2sem/Task1_HelloWorld/source/: main_advanced.cpp
2sem/Task2_SumNumbers/: CMakeLists.txt
2sem/Task3_ArrayModify/: CMakeLists.txt  right_answer.txt
2sem/Task3_ArrayModify/source/: main.cpp
2sem/Task4_Multiply_Matrices/: analyze_bench.py
2sem/Task4_Multiply_Matrices/source/: main.cpp
2sem/Task5_InfiniteSeries/: CMakeLists.txt
2sem/Task6_PrimeNumbers/include/: input.h
2sem/Task6_PrimeNumbers/source/: main.cpp
2sem/Task8_QuickSort/: CMakeLists.txt
2sem/Task8_QuickSort/include/: read_array.h
2sem/Task8_QuickSort/source/: main.cpp  read_array.cpp
2sem/Task9_FixBugs/: CMakeLists.txt
2sem/Task9_FixBugs/source/: bugged1.c  bugged2.c  bugged3.c  bugged4.c  bugged5.c  bugged6.c
acronis/classtasks/simple_thread/: CMakeLists.txt
acronis/classtasks/simple_thread/source/: main.cpp
acronis/hometasks/lockfreeskiplist/include/: exponential_backoff.h  lock_free_skip_list.h
acronis/hometasks/lockfreeskiplist/source/: main.cpp
acronis/hometasks/lockfreestack/: analyze_bench.py
acronis/hometasks/lockfreestack/include/: hazard_ptr.h  mutex_stack.h
acronis/hometasks/lockfreestack/source/: main.cpp
acronis/hometasks/spinlock/: CMakeLists.txt  bench_tas.txt  bench_ticket.txt  bench_ttas.txt  launch_bench.sh
acronis/hometasks/spinlock/include/: spin_lock.h
acronis/hometasks/spinlock/source/: bench.cpp  main.cpp
acronis/hometasks/workstealingpool/: CMakeLists.txt
acronis/hometasks/workstealingpool/include/: threadpool.h
acronis/hometasks/workstealingpool/source/: main.cpp
cppwrapper/: CMakeLists.txt
cppwrapper/include/: comm.h
cyberprotect_1sem/hometasks/lockfreeskiplist/include/: ebr.h  mutex_map.h  require.h  tagged_ptr.h
cyberprotect_1sem/hometasks/lockfreestack/: CMakeLists.txt  output.txt
cyberprotect_1sem/hometasks/lockfreestack/include/: lock_free_stack.h
cyberprotect_1sem/hometasks/spinlock/: analyze_bench.py
cyberprotect_1sem/hometasks/workstealingpool/include/: threadpool.h
cyberprotect_2sem/distributed_system/: .gitignore  clear.sh  go.mod  main.go  system_logs.txt
cyberprotect_2sem/distributed_system/node/: main.go  system_logs.txt
cyberprotect_2sem/distributed_system/node/common/: common.go
cyberprotect_2sem/distributed_system/node/master/: master.go
cyberprotect_2sem/distributed_system/node/replica/: replica.go
cyberprotect_2sem/distributed_system/node/storage_replica_0/foo/: bar.html
cyberprotect_2sem/distributed_system/storage_r1/: foo.html
cyberprotect_2sem/network_integral/: CMakeLists.txt  watchCPU.sh
cyberprotect_2sem/network_integral/include/: cvector.h  deque.h  network.h  task.h
cyberprotect_2sem/network_integral/lib/input/: CMakeLists.txt
cyberprotect_2sem/network_integral/lib/input/include/: input.h
cyberprotect_2sem/network_integral/lib/input/src/: input.c
cyberprotect_2sem/network_integral/lib/integral/: CMakeLists.txt
cyberprotect_2sem/network_integral/lib/integral/include/: integral.h
cyberprotect_2sem/network_integral/lib/integral/src/: integral.c
cyberprotect_2sem/network_integral/src/: client.c  deque.c  server.c
cyberprotect_2sem/network_integral/tests/: crash_test.sh  freeze_test.sh  simple_test.sh  test.py
mipt_1sem/: README.md
mipt_1sem/cppwrapper/include/: core.h  traits.h
mipt_1sem/tasks/Lab1_TransportEquation/: CMakeLists.txt
mipt_1sem/tasks/Lab2_IntegralCalculation/: CMakeLists.txt  elapse.sh
mipt_1sem/tasks/Task2_ParallelSort/include/: input.h  parallel_sort.h
mipt_1sem/tasks/Task2_ParallelSort/source/: Script.py
mipt_2sem/Lab1_Loops/: CMakeLists.txt  analysis.md  job.sh  output_generic.txt  output_personal.txt  plot_res.py
mipt_2sem/Lab1_Loops/source/: generic_parallel.cpp  generic_sequential.cpp  personal_parallel.cpp
mipt_2sem/Task1_HelloWorld/source/: main_basic.cpp
mipt_2sem/Task2_SumNumbers/source/: main.cpp
mipt_2sem/Task3_ArrayModify/: right_answer.txt
mipt_2sem/Task3_ArrayModify/source/: main.cpp
mipt_2sem/Task4_Multiply_Matrices/: CMakeLists.txt  analyze_bench.py
mipt_2sem/Task4_Multiply_Matrices/include/: get_matrix.h  matrix.h
mipt_2sem/Task4_Multiply_Matrices/source/: bench.cpp
mipt_2sem/Task5_InfiniteSeries/include/: input.h
mipt_2sem/Task5_InfiniteSeries/source/: input.cpp  main.cpp
mipt_2sem/Task6_PrimeNumbers/: CMakeLists.txt
mipt_2sem/Task6_PrimeNumbers/source/: input.cpp  main.cpp
mipt_2sem/Task8_QuickSort/: generate_tests.py
mipt_2sem/Task8_QuickSort/include/: quick_sort.h
mipt_2sem/Task8_QuickSort/source/: input.cpp
mipt_2sem/Task8_QuickSort/tests/: test_2.txt
mipt_2sem/Task9_FixBugs/: CMakeLists.txt
mipt_2sem/Task9_FixBugs/source/: bugged3.c  bugged4.c  bugged5.c  bugged6.c
tasks/: list.txt
tasks/Lab1_TransportEquation/: CMakeLists.txt
tasks/Lab1_TransportEquation/include/: TransportEquationSolver.h
tasks/Lab1_TransportEquation/source/: Main.cpp  Plot.py  TransportEquationSolver.cpp
tasks/Lab2_IntegralCalculation/source/: input.c  integral.c  main.c
tasks/Task0_Harmonic/source/: harmonic.c
tasks/Task0_HelloWorld/source/: test_mpi.c
tasks/Task1_CalculateExp/Var1_Arg_N/source/: exp.c
tasks/Task1_CalculateExp/Var2_LongArithmetics/source/: .exp.c.swp  exp.c
tasks/Task2_ParallelSort/source/: Script.py  parallel_sort.c
